fix overlaping content with footer at bottom of the page

--- a/games/static/css/common-style.css
+++ b/games/static/css/common-style.css
@@ -130,6 +130,7 @@ main {
     vertical-align: middle;
     margin-left: 150px; /* offset for sidebar */
     float: left;
+    margin-bottom: 50px;
 }
 
 div.section_title {
@@ -151,6 +152,7 @@ footer {
     background-color: rgb(14, 30, 77);
     margin: 0px;
     width: 100%;
+    height: 35px;
     position: fixed;
     bottom: 0;
 }
